RESOLVED FIXED86507
Ruby annotation is incorrectly identified as a paragraph boundary
https://bugs.webkit.org/show_bug.cgi?id=86507
Summary Ruby annotation is incorrectly identified as a paragraph boundary
mitz
Reported 2012-05-15 12:10:50 PDT
Ruby annotation is incorrectly identified as a paragraph boundary
Attachments
Do not consider ruby text as a block for paragraph boundary purposes (5.53 KB, patch)
2012-05-15 12:14 PDT, mitz
darin: review+
mitz
Comment 1 2012-05-15 12:11:57 PDT
mitz
Comment 2 2012-05-15 12:14:36 PDT
Created attachment 142021 [details] Do not consider ruby text as a block for paragraph boundary purposes
mitz
Comment 3 2012-05-15 12:24:46 PDT
Note You need to log in before you can comment on or make changes to this bug.