Ruby annotation is incorrectly identified as a paragraph boundary https://bugs.webkit.org/show_bug.cgi?id=86507

Reviewed by Darin Adler.

Source/WebCore:

Test: editing/selection/paragraph-with-ruby.html

* editing/htmlediting.cpp:
(WebCore::isBlock): Changed to return false for ruby text.

LayoutTests:

* editing/selection/paragraph-with-ruby-expected.txt: Added.
* editing/selection/paragraph-with-ruby.html: Added.



Canonical link: https://commits.webkit.org/104093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117116 268f45cc-cd09-0410-ab3c-d52691b4dbfc